mcp-ui/mcp-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-ui
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-ui
  template:
    metadata:
      labels:
        app: mcp-ui
    spec:
      serviceAccountName: mcp-ui-sa
      containers:
      - name: mcp-ui
        image: kamalberrybytes/mcp-ui-app:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # env:
        # - name: AZURE_CLIENT_ID
        #   value: "11ddc0cd-e6fc-48b6-8832-de61800fb41e"
        # - name: AZURE_TENANT_ID
        #   value: "6ba231bb-ad9e-41b9-b23d-674c80196bbd"
        # - name: GATEWAY_URL
        #   value: "http://agentgateway.default.svc.cluster.local:8080"
        # - name: AZURE_CLIENT_SECRET
        #   value: ""
        # - name: REDIRECT_URI
        #   value: "http://localhost:4000/auth/callback"
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-ui-service
  namespace: test
  labels:
    app: mcp-ui
spec:
  type: NodePort
  selector:
    app: mcp-ui
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 30441
